[package]
name = "sisku-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.2"
actix-files = "0.6.2"
actix-web = "4.1.0"
async-graphql = "4.0.10"
async-graphql-actix-web = "4.0.10"
xdg = "2.4.1"
